# x-majordomo

./: Cargo.toml  README.md
.github/workflows/: checks.yml  release.yml  staging.yml
src/: hap.rs  main.rs  mqtt.rs  pdu.rs  util.rs  waker.rs
src/pdu/: hap.rs  mqtt.rs
