[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "HAP & MQTT smart pdu implementation."
edition     = "2021"
homepage    = "https://hack.ink/pdu"
license     = "GPL-3.0"
name        = "pdu"
readme      = "README.md"
repository  = "https://github.com/inv-cafe/pdu"
version     = "0.2.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.2", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
hap                = { git = "https://github.com/mzyy94/hap-rs", version = "0.1.0-pre.15", branch = "patch-verify" }
rumqttc            = { version = "0.22" }
serde              = { version = "1.0" }
tokio              = { version = "1.32", features = ["macros", "rt-multi-thread", "time"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
