[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "HAP & MQTT smart majordomo implementation."
edition     = "2021"
homepage    = "https://inv.cafe/code/x-majordomo"
license     = "GPL-3.0"
name        = "x-majordomo"
readme      = "README.md"
repository  = "https://github.com/inv-cafe/x-majordomo"
version     = "0.3.2"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
clap               = { version = "4.5", features = ["derive"] }
hap                = { git = "https://github.com/mzyy94/hap-rs", version = "0.1.0-pre.15", branch = "patch-verify" }
rumqttc            = { version = "0.23" }
serde              = { version = "1.0" }
tokio              = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
wakey              = { version = "0.3" }
